# ntive

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  demo.py  executor.py  graph.py  ir.py  pyproject.toml  test_capability_descriptor.py  test_decision.py  test_decision_engine.py  test_decision_request.py  test_decision_response.py  test_errors.py  test_feature_flags.py  test_graph.py  test_memory_scope.py  test_parser.py  test_policy_primitive.py  test_runtime.py  test_trace.py  test_trace_primitive.py  test_trace_replay.py  trace.py
docs/: human_step_ir_schema.md  ntive_syntax_spec.md
examples/: assistant_flow.py  feature_flags.py  regulated_flow.py  simulation_flow.py
ntive/: __init__.py  ast_nodes.py  capability.py  decision.py  engine.py  errors.py  memory.py  parser.py  policy.py  request.py  response.py  runtime.py  trace.py  trace_replay.py
