[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntive"
version = "0.1.0"
description = "Causal execution engine with full traceability — every decision has an explicit origin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ntive Team"}
]
keywords = [
    "causal-inference",
    "execution-engine",
    "traceability",
    "ai-agents",
    "deterministic",
    "audit",
    "compliance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ntive"
Documentation = "https://github.com/yourusername/ntive#readme"
Repository = "https://github.com/yourusername/ntive"
Issues = "https://github.com/yourusername/ntive/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ntive*", "examples*"]

[tool.setuptools]
py-modules = ["ir", "executor", "trace", "graph"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.coverage.run]
source = ["ir", "executor", "trace", "graph"]
omit = ["test_*.py", "demo.py"]
